# mycondominium-backend

./: .env.template  .gitignore  .gitlab-ci.yml  Cargo.toml  Cross.toml  LICENSE  README.md
.docker/: Dockerfile.cross-rs-x86_64-pc-windows-gnu  Dockerfile.cross-rs-x86_64-unknown-linux-gnu  Dockerfile.cross-rs-x86_64-unknown-linux-musl  Dockerfile.gitlab-ci-build
.gitlab-ci/: .gitlab-ci.build.yml  .gitlab-ci.deploy.yml  .gitlab-ci.release.yml  build.yml  deploy.yml  release.yml  release_nightly.yml
db_ops_derive/: Cargo.toml
db_ops_derive/src/: lib.rs
migrations/2025-02-19-205536_create_communities/: up.sql
migrations/2025-03-10-171022_create_residents/: up.sql
migrations/2025-03-10-172222_create_invoices/: up.sql
migrations/2025-03-10-172230_create_common_areas/: down.sql  up.sql
migrations/2025-03-10-172239_create_reservations/: up.sql
migrations/2025-03-10-172245_create_incidents/: up.sql
migrations/2025-03-10-172250_create_announcements/: up.sql
migrations/2025-03-10-172254_create_vehicles/: up.sql
migrations/2025-03-10-172300_create_elections/: up.sql
migrations/2025-03-10-172304_create_votes/: up.sql
migrations/2025-03-10-172310_create_parcels/: down.sql  up.sql
migrations/2025-03-10-172315_create_maintenance_schedules/: down.sql  up.sql
migrations/2025-03-10-172322_create_documents/: up.sql
migrations/2025-03-16-185008_create_admins/: up.sql
migrations/2025-03-16-185156_create_users/: up.sql
migrations/2025-03-16-191629_create_auth_tokens/: up.sql
migrations/2025-03-19-205521_create_user_roles/: up.sql
migrations/2025-03-19-211413_create_document_shares/: down.sql  up.sql
migrations/2025-04-16-184018_create_resident_invites/: down.sql  up.sql
migrations/2025-05-18-145454_create_password_reset/: up.sql
migrations/2025-05-25-181555_create_election_candidates/: down.sql  up.sql
migrations/2025-05-25-272304_create_votes/: up.sql
res/: config_template.yaml
res/mail/: new_account_created.html  password_reset.html  password_reset_warning.html  resident_invite.html
src/: cli.rs  lib.rs  main.rs  schema.rs  types.rs  utils.rs
src/internal/: mod.rs  roles.rs  user_roles.rs  user_types.rs
src/internal/config/: model.rs
src/internal/rabbitmq/: mod.rs  rabbitmq_client.rs  rabbitmq_service.rs
src/internal/scheduled_tasks/: mod.rs  scheduled_tasks_service.rs
src/internal/smtp/: mod.rs  smtp_client.rs  smtp_service.rs  smtp_templates.rs
src/middleware/: cors.rs
src/models/: admin_model.rs  announcement_model.rs  auth_model.rs  auth_token_model.rs  common_area_model.rs  community_model.rs  document_model.rs  document_share_model.rs  election_model.rs  incident_model.rs  invoice_model.rs  lib.rs  maintenance_schedule_model.rs  mod.rs  parcel_model.rs  prelude.rs  reservation_model.rs  resident_model.rs  user_model.rs  user_role_model.rs  vehicle_model.rs  vote_model.rs
src/routes/: routes.rs
src/services/: mod.rs  prelude.rs
src/services/admin_service/: get_admin.rs  mod.rs  upsert_admin.rs
src/services/auth_service/: auth.rs  mod.rs  new_admin_self_service.rs  password_reset.rs  sign_in.rs
src/services/common_area_service/: get_common_area.rs  mod.rs  upsert_common_area.rs
src/services/community_service/: get_community.rs  mod.rs  upsert_community.rs
src/services/election_service/: get_election.rs  get_vote.rs  mod.rs  upsert_candidate.rs  upsert_election.rs  upsert_vote.rs
src/services/incident_service/: get_incident.rs  mod.rs  upsert_incident.rs
src/services/invoice_service/: get_invoice.rs  mod.rs  upsert_invoice.rs
src/services/maintenance_schedule_service/: get_maintenance_schedule.rs  mod.rs  (+1 more)
src/utilities/: auth_utils.rs  mod.rs  user_utils.rs
tests/: admin_tests.rs  auth_utils_tests.rs  main_tests.rs
(+13 files in other folders)
