[package]
name = "mycondominium-backend"
version = "0.1.2"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
actix-cors = "0.6"
bigdecimal = "0.4.7"
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.8", features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
minio = "0.1.0"
serde = { version =  "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
utoipa = { version = "5.3.1", features = ["chrono", "uuid", "actix_extras"] }
uuid = { version =  "1.15.1", features = ["serde", "v4"] }
validator = { version =  "0.20.0", features = ["validator_derive"] }
validator_derive = "0.20.0"
log = "0.4.26"
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
password-hash = "0.5.0"
argon2 = "0.5.3"
db_ops_derive = { path = "./db_ops_derive" }
jsonwebtoken = "9.3.1"
user-agent-parser = "0.3.6"
lettre = "0.11.15"
serde_yaml = "0.9.34"
